# lora-trainer

./: .env.example  .gitignore  BOOK_COVER_DATASET_PREP.md  BOOK_COVER_TRAINING_QUICKSTART.md  GENERATION_ISSUE_SUMMARY.md  HOW_TO_GENERATE_IMAGES.md  LICENSE  MODAL_DEPLOYMENT_PLAN.md  MODAL_GENERATION_GUIDE.md  MODAL_LAUNCH.md  MODAL_QUICK_START.md  MODAL_UI_INTEGRATION.md  QUICK_START_GENERATION.md  README.md  SETUP_GUIDE.md  TEST_GENERATION_SETUP.md  check_modal_output.py  check_training_status.py  download_and_upload_book_dataset.py  download_flux2.py  download_modal_images.py  download_training_samples.py  find_and_download_images.py  flux2_gen.py  flux_dev_gen.py  get_modal_images.py  list_modal_files.py  modal_generate_deploy.py  modal_test_deploy.py  modal_train_deploy.py  prepare_book_cover_dataset.py  pyproject.toml  run_tests_modal.sh  sample.py  setup_book_dataset_on_modal.py  test_generation_setup.py  upload_dataset_to_modal.py  utils.py  vram_example.py  zimage.py  (+4 more)
Marketing/: EXECUTIVE_SUMMARY.md  FINANCIAL_PROJECTIONS.md  FUNDING_REQUEST_PACKAGE.md  MARKETING_PACKAGE.md  PITCH_DECK_OUTLINE.md  QUICK_START_GUIDE.md  README.md
Marketing/website/: index.html  script.js  styles.css
Z-Image-Turbo/: TRAINING_ADAPTER_EXPLANATION.md  Z_IMAGE_TURBO_AUDIT.md
ai-toolkit-z_image_turbo/: INSTALLATION.md  INTEGRATION_STATUS.md  README.md  TEST_RESULTS.md  UV_INTEGRATION_SUMMARY.md  UV_SETUP.md  Z_IMAGE_TURBO_INTEGRATION_PLAN.md  install_with_uv.sh  pyproject.toml  requirements-comprehensive.txt  requirements-dev.txt  requirements.txt  test_zimage_simple.py  test_zimage_turbo.py
ai-toolkit-z_image_turbo/FLUX2_INTEGRATION/: FLUX2_DEVELOPMENT_PLAN.md  FLUX2_MIGRATION_AUDIT.md
ai-toolkit-z_image_turbo/config/examples/: train_lora_zimage_turbo_24gb.yaml
ai-toolkit-z_image_turbo/config/examples/modal/: modal_train_lora_book_covers.yaml  modal_train_lora_book_covers_resume.yaml  modal_train_lora_zimage_turbo_24gb.yaml
ai-toolkit-z_image_turbo/scripts/: download_zimage_models.py
ai-toolkit-z_image_turbo/toolkit/: config_modules.py  stable_diffusion_model.py
ai-toolkit-z_image_turbo/toolkit/models/: base_model.py
ai-toolkit-z_image_turbo/ui/: README.md  package-lock.json  package.json  playwright.config.ts
ai-toolkit-z_image_turbo/ui/e2e/: TEST_RESULTS.md  job-creation.spec.ts
ai-toolkit-z_image_turbo/ui/src/app/api/jobs/: route.ts
ai-toolkit-z_image_turbo/ui/src/app/api/jobs/[jobID]/deploy-modal/: route.ts
ai-toolkit-z_image_turbo/ui/src/app/api/jobs/[jobID]/start/: route.ts
ai-toolkit-z_image_turbo/ui/src/app/api/settings/: route.ts
ai-toolkit-z_image_turbo/ui/src/app/jobs/new/: SimpleJob.tsx  page.tsx
ai-toolkit-z_image_turbo/ui/src/app/settings/: page.tsx
ai-toolkit-z_image_turbo/ui/src/components/: ErrorBanner.tsx  JobActionBar.tsx
ai-toolkit-z_image_turbo/ui/src/utils/: jobs.ts
book_cover_cli/: OUTPUT_INFO.md  QUICKSTART.md  README.md  __init__.py  book_cover_generator.py  download_lora.py  example_usage.sh  generate_on_modal.py  run_generator.sh
book_cover_cli/book_covers/: 1764551651682_0.txt
datasets/my_style/: image_000.txt  image_001.txt  image_002.txt  image_003.txt  image_004.txt  image_005.txt  image_006.txt
development/: MODAL_TEST_DEPLOY.md
frontend/: README.md  app.py  package-lock.json  package.json  playwright.config.js  requirements.txt  run.sh
frontend/static/: script.js  style.css
frontend/templates/: index.html
frontend/tests/e2e/: README.md  api-test-results.json  console-errors.json  error-cases.spec.js  frontend-ui.spec.js  test-results.md
tests/: README.md  TEST_RESULTS.md  TEST_STATUS.md  fix_torchaudio_import.py  test_zimage_turbo_hub_models.py  test_zimage_turbo_local_models.py
